--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -11,6 +11,10 @@ body {
   background-color: #f5f5f7;
 }
 
+main{
+  margin-bottom: 60px;
+}
+
 * {
   color: #1d1d1f;
 }
@@ -43,8 +47,8 @@ body {
 .title {
   max-width: 1000px;
   margin: auto;
-  padding-top: 32px;
-  padding-bottom: 32px;
+  padding-top: 46px;
+  padding-bottom: 24px;
 }
 
 .items {
