--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -11,7 +11,7 @@ body {
   background-color: #f5f5f7;
 }
 
-main{
+main {
   margin-bottom: 320px;
 }
 
@@ -65,13 +65,33 @@ main{
   margin-top: 5px;
   margin-right: 10px;
   margin-bottom: 5px;
-  padding: 12px;
+  padding: 10px;
+  border-radius: 16px;
+  cursor: pointer;
 }
 
 .item:last-child {
   margin-right: 0;
 }
 
-.item .thumpnail {
+.item__tag {
+  text-transform: uppercase;
+  color: #969696;
+  font-size: 10px;
+  margin: 8px 0;
+}
+
+.item__title {
+  font-size: 24px;
+  margin: 8px 0;
+  font-weight: bold;
+}
+
+.item__description{
+  margin: 12px 0 24px 0;
+}
+
+.item__thumpnail {
   width: 200px;
+  margin: 10px;
 }
